# mycelium

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  aws_setup.md  benchmark_dual_signal.py  cleaned_templates.json  cloudbuild.yaml  curated_templates.json  curriculum_examples.md  debug_dual_signal.py  deduplicated_templates.json  dsl_library.json  dual_signal_templates.json  enhanced_dsl_library.json  fixed_templates.json  ib_true_templates.json  ideas.md  index.html  learned_balanced.json  learned_welford_profiles.json  mycelium.db-shm  mycelium.db-wal  notes1.py  operation_templates.json  package-lock.json  paper.html  paper.md  paper.txt  pyproject.toml  requirements.txt  semantic_clusters.json  span_templates_export.json
.beads/: README.md  issues.jsonl  last-touched  sync-state.json  sync_base.jsonl
configs/: curriculum.yaml  thinking_gsm8k.yaml
data/: generate_phase2_data.py
docs/: GUT_REGISTRY.md  NEXT_SESSION.md  c2_recall_analysis.md  cathedral_port_spec.md  circuit_scaling_results.md  general_engine_results.md  general_factor_graph_search.md  granularity_probe_spec.md  hyperbolic_mask_generator_spec.md  perceiver_fp16_think_patch.md  perceiver_perf_rootcause.md  perceiver_poincare_design.md  phase1_construction_brief.md  phase1_nl_parser_spec.md  phase1_prep_grounding.md  phase1_skeleton_spec.md  routing_audit.md  session_2026_06_22_volume_and_energy_win.md  session_2026_06_23_kenken_frontier_mapped.md  session_2026_06_24_generality_grail.md  session_2026_06_25_capacity_and_dual_view.md  session_2026_06_26_solving_closed_phase1_pivot.md  session_2026_07_04_alternator_docs_adopted.md  state_of_mycelium.md  v200_brief.md  v300_design_seed.md
inference/: assembler.py  c3_failure_analysis.py  candidate_generator.py  diagnostic.py  e2e_diagnostic.py  e2e_pipeline.py  eval_gsm8k_batch.py  eval_quick.py  math_answer_normalizer.py  pipeline_6model.py  test_c2_coarse.py  test_c2c3_50.py  (+12 more)
(+1446 files in other folders)
