[project]
name = "mycelium"
version = "3.1.0"
description = "Recursive problem decomposition with signature-based solution networks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "sympy>=1.12",
    "datasets>=2.0.0",
    "openai>=2.16.0",
    "litellm>=1.81.5",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "pytest-cov>=7.0.0",
]
