[project]
name = "mycelium"
version = "6.0.0"
description = "Math word problem solver using span-based decomposition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.0.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
